<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/GenderLL"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/GenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/GenderRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/MaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/FemaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ObjectiveLL"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_above="@+id/InfoSaveLL"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/ObjectiveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objective" />

        <RadioGroup
            android:id="@+id/ObjectiveRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/DrinkingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objective_drinking" />

            <RadioButton
                android:id="@+id/NotDrinkingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objective_not_drinking" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AgeLL"
        android:layout_width="170dp"
        android:layout_height="185dp"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/GenderLL"
        android:layout_alignEnd="@+id/InfoSaveLL">

        <TextView
            android:id="@+id/AgeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <RadioGroup
            android:id="@+id/AgeRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/RadioButton20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_20" />

            <RadioButton
                android:id="@+id/RadioButton30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_30" />

            <RadioButton
                android:id="@+id/RadioButton40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_40" />

            <RadioButton
                android:id="@+id/RadioButton50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_50" />

            <RadioButton
                android:id="@+id/RadioButton60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_60" />

            <RadioButton
                android:id="@+id/RadioButton70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_70" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/InfoSaveLL"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_above="@+id/ControlLL"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ControlLL"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_above="@+id/GraphLL"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/StopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/ResetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/GraphLL"
        android:layout_width="fill_parent"
        android:layout_height="270dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

    </LinearLayout>

</RelativeLayout>
